# Investment-Select-Quant-Tools

./: .gitignore  PRESENTATION_AND_QA.tex  PRESENTATION_SCRIPT.md  QA_QUESTIONS_AND_ANSWERS.md  README.md  backtest.py  config.py  project_tree.txt
DATA LAYER/: metadata.json  pipeline.py  python_test_handoff.py  scaler.pkl  schema.json  splits.npz  windows.npz
Market_Regime_Detection_Using_Autoencoders_and_PCA/: main.tex  mybibfile.bib
market-regime-autoencoder/: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
market-regime-autoencoder/outputs/handoff/: clustered_regimes.csv  latent_space.csv  split_reconstruction_loss.csv  training_loss.csv
market-regime-autoencoder/scripts/: latent_dim_ablation.py  make_sample_data.py  prepare_course_market_data.py
market-regime-autoencoder/src/ae_regimes/: __init__.py  clustering.py  config.py  data.py  model.py  train.py  train_handoff.py
market-regime-autoencoder/trading-strategy/: backtest_regimes.py
pca-regime-analysis/: pca_analysis.py
pca-regime-analysis/outputs/: pca_ae_comparison.csv  pca_clustered_regimes.csv  pca_latent_space.csv
trading-strategy/outputs/: signal_set_comparison.csv
trading-strategy:/: compare_signal_sets.py  requirements.txt
