[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "market-regime-autoencoder"
version = "0.1.0"
description = "Autoencoder-based latent regime extraction for financial time-series features."
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "torch>=2.0",
    "openpyxl>=3.1",
    "pypdf>=4.0",
]

[tool.setuptools.packages.find]
where = ["src"]
